--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      List
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,8 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-item  *ngFor ="let item of myList">
+    <div>{{item}}</div>
+  </ion-item>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
